added more content to layout

--- a/app/src/main/res/layout/activity_timer_post.xml
+++ b/app/src/main/res/layout/activity_timer_post.xml
@@ -16,13 +16,12 @@
             android:text="@string/event_post_name"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp"
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginBottom="10dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="10dp">
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -32,7 +31,8 @@
             <EditText
                 android:id="@+id/timer_name"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="13dp" />
 
         </LinearLayout>
 
@@ -41,14 +41,17 @@
             android:layout_height="1dip"
             android:layout_alignParentTop="true"
             android:layout_centerVertical="true"
-            android:background="@color/mdtp_accent_color" />
+            android:background="@color/mdtp_accent_color"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/time_post"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:layout_marginBottom="10dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,17 +67,20 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingLeft="15dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/start_time_post" />
+                    android:text="@string/start_time_post"
+                    android:textSize="15sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/end_time_post" />
+                    android:text="@string/end_time_post"
+                    android:textSize="15sp" />
 
             </LinearLayout>
 
@@ -85,22 +91,24 @@
             android:layout_height="1dip"
             android:layout_alignParentTop="true"
             android:layout_centerVertical="true"
-            android:background="@color/mdtp_accent_color" />
+            android:background="@color/mdtp_accent_color"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/schedule_post"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:layout_marginBottom="10dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="1"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp">
+            android:layout_marginBottom="10dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -109,25 +117,24 @@
 
             <Spinner
                 android:id="@+id/repeat_spinner"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.1"
                 android:entries="@array/repeat_array"
-                android:paddingLeft="20dp"
+                android:paddingLeft="10dp"
                 android:prompt="@string/repeat_prompt"
                 android:spinnerMode="dialog" />
 
-            <android.support.v4.widget.Space
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="0.4"/>
+            <!--<android.support.v4.widget.Space-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="0.4"/>-->
 
-            <CheckBox
-                android:id="@+id/checkBox"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="0.5"
-                android:text="All Days" />
+            <!--<CheckBox-->
+                <!--android:id="@+id/checkBox"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="0.5"-->
+                <!--android:text="All Days" />-->
 
         </LinearLayout>
 
@@ -135,7 +142,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="7">
+            android:weightSum="7"
+            android:layout_marginBottom="5dp">
 
             <TextView
                 android:id="@+id/monday_text_view"
@@ -222,24 +230,34 @@
 
         </LinearLayout>
 
+        <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="All Days" />
+
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dip"
             android:layout_alignParentTop="true"
             android:layout_centerVertical="true"
-            android:background="@color/mdtp_accent_color" />
+            android:background="@color/mdtp_accent_color"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/ringer_post"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:layout_marginBottom="10dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_weight="1">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -249,12 +267,15 @@
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Vibrate" />
+                android:text="Vibrate"
+                android:layout_weight="0.2"
+                android:layout_marginLeft="15dp"/>
 
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Silence" />
+                android:text="Silence"
+                android:layout_weight="0.8"/>
 
         </LinearLayout>
 
