--- a/app/src/main/res/drawable/circle_green.xml
+++ b/app/src/main/res/drawable/circle_green.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#9FE554" />
+    <solid android:color="@color/circular_text_view_solid_color" />
     <size
         android:height="45dp"
         android:width="25dp" />
